@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkCmds.c,v 1.41 2007/12/13 15:24:13 dgp Exp $
+ * RCS: @(#) $Id: tkCmds.c,v 1.42 2008/06/13 05:46:09 mistachkin Exp $
  */
 
 #include "tkInt.h"
@@ -915,6 +915,7 @@ Tk_TkwaitObjCmd(
 {
     Tk_Window tkwin = (Tk_Window) clientData;
     int done, index;
+    int code = TCL_OK;
     static const char *optionStrings[] = {
 	"variable", "visibility", "window", NULL
     };
@@ -941,6 +942,10 @@ Tk_TkwaitObjCmd(
 	}
 	done = 0;
 	while (!done) {
+	    if (Tcl_Canceled(interp, TCL_LEAVE_ERR_MSG) == TCL_ERROR) {
+		code = TCL_ERROR;
+		break;
+	    }
 	    Tcl_DoOneEvent(0);
 	}
 	Tcl_UntraceVar(interp, Tcl_GetString(objv[2]),
@@ -960,9 +965,13 @@ Tk_TkwaitObjCmd(
 		WaitVisibilityProc, (ClientData) &done);
 	done = 0;
 	while (!done) {
+	    if (Tcl_Canceled(interp, TCL_LEAVE_ERR_MSG) == TCL_ERROR) {
+		code = TCL_ERROR;
+		break;
+	    }
 	    Tcl_DoOneEvent(0);
 	}
-	if (done != 1) {
+	if ((done != 0) && (done != 1)) {
 	    /*
 	     * Note that we do not delete the event handler because it was
 	     * deleted automatically when the window was destroyed.
@@ -990,25 +999,38 @@ Tk_TkwaitObjCmd(
 		WaitWindowProc, (ClientData) &done);
 	done = 0;
 	while (!done) {
+	    if (Tcl_Canceled(interp, TCL_LEAVE_ERR_MSG) == TCL_ERROR) {
+		code = TCL_ERROR;
+		break;
+	    }
 	    Tcl_DoOneEvent(0);
 	}
 
 	/*
-	 * Note: there's no need to delete the event handler. It was deleted
-	 * automatically when the window was destroyed.
+	 * Note: normally there's no need to delete the event handler. It was deleted
+	 * automatically when the window was destroyed; however, if the wait operation
+	 * was canceled, we need to delete it.
 	 */
 
+	if (done == 0) {
+	    Tk_DeleteEventHandler(window,
+		    StructureNotifyMask,
+		    WaitWindowProc, (ClientData) &done);
+	}
 	break;
     }
     }
 
     /*
      * Clear out the interpreter's result, since it may have been set by event
-     * handlers.
+     * handlers. This is skipped if an error occurred above, such as the wait
+     * operation being canceled.
      */
 
+    if (code == TCL_OK)
     Tcl_ResetResult(interp);
-    return TCL_OK;
+
+    return code;
 }
 
 	/* ARGSUSED */
@@ -1082,6 +1104,7 @@ Tk_UpdateObjCmd(
     static const char *updateOptions[] = {"idletasks", NULL};
     int flags, index;
     TkDisplay *dispPtr;
+    int code = TCL_OK;
 
     if (objc == 1) {
 	flags = TCL_DONT_WAIT;
@@ -1106,12 +1129,35 @@ Tk_UpdateObjCmd(
 
     while (1) {
 	while (Tcl_DoOneEvent(flags) != 0) {
-	    /* Empty loop body */
+	    if (Tcl_Canceled(interp, TCL_LEAVE_ERR_MSG) == TCL_ERROR) {
+		code = TCL_ERROR;
+		break;
+	    }
 	}
+
+	/*
+	 * If event processing was canceled proceed no further.
+	 */
+
+	if (code == TCL_ERROR)
+	    break;
+
 	for (dispPtr = TkGetDisplayList(); dispPtr != NULL;
 		dispPtr = dispPtr->nextPtr) {
 	    XSync(dispPtr->display, False);
 	}
+
+	/*
+	 * Check again if event processing has been canceled because the inner
+	 * loop (above) may not have checked (i.e. no events were processed and
+	 * the loop body was skipped).
+	 */
+
+	if (Tcl_Canceled(interp, TCL_LEAVE_ERR_MSG) == TCL_ERROR) {
+	    code = TCL_ERROR;
+	    break;
+	}
+
 	if (Tcl_DoOneEvent(flags) == 0) {
 	    break;
 	}
@@ -1119,11 +1165,14 @@ Tk_UpdateObjCmd(
 
     /*
      * Must clear the interpreter's result because event handlers could have
-     * executed commands.
+     * executed commands. This is skipped if an error occurred above, such as
+     * the wait operation being canceled.
      */
 
+    if (code == TCL_OK)
     Tcl_ResetResult(interp);
-    return TCL_OK;
+
+    return code;
 }
 
 /*
